--- a/src/components/CarsList/CarsList.module.css
+++ b/src/components/CarsList/CarsList.module.css
@@ -1,6 +1,7 @@
 .list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 48px 32px;
     margin-bottom: 80px;
+    margin-top: 56px;
 }
