--- a/src/components/LoadMore/LoadMore.module.css
+++ b/src/components/LoadMore/LoadMore.module.css
@@ -1,13 +1,21 @@
 .btn {
-    color: var(--main);
     padding: 12px 38px;
     border-radius: 12px;
-    border: 1px solid #3470ff;
-    display: block;
+    border: 1px solid var(--button);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
     margin-top: 80px;
+    margin-bottom: 124px;
     font-weight: 600;
-    font-size: var(font-size-base);
+    font-size: 16px;
     line-height: 125%;
-    border-color: transparent;
+    background-color: transparent;
+    color: var(--main);
+}
+
+.btn:hover,
+.btn:focus {
+    border-color: var(--button-hover);
 }
